nodeweighttracker-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeweighttracker-app
  labels:
    app: nodeweighttracker-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeweighttracker-app
  template:
    metadata:
      name: nodeweighttracker-app
      labels:
        app: nodeweighttracker-app
    spec:
      containers:
      - name: nodeweighttracker-app
        image: bootcampappcontainer.azurecr.io/bootcamp-app:205
        imagePullPolicy: Always
        ports:
        - containerPort: 80
