nodeweighttracker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeweighttracker-app-svc
  labels:
    app: bootcamp-app
spec:
  type: LoadBalancer
  selector:
    app: bootcamp-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
