nodeweighttracker-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodeweighttracker-app-ingress
  namespace: staging
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testnodeweighttracker
    http:
      paths:
      - path: "/nodeweighttracker"
        backend:
          serviceName: nodeweighttracker-app-svc
          servicePort: 80

# ---

# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   labels:
#     app.kubernetes.io/component: controller
#   name: nginx
#   annotations:
#     ingressclass.kubernetes.io/is-default-class: "true"
# spec:
#   controller: k8s.io/ingress-nginx
